--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,9 @@
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
-        <a href="about.html" title="About Me">About Me</a>
+        <!-- Adding stuff here. God help me. -->
+        <a href="about.html" title="About Us">About Me</a>
+        <a href="assessments.md" title="Assessments">Assessments</a>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
