--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,9 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
         <!-- Adding stuff here. God help me. -->
-        <a href="about.html" title="About Us">About Me</a>
-        <a href="assessments.md" title="Assessments">Assessments</a>
+        <p class="view"><a href="about.html" title="About Us">About Us</a></p>
+        <p class="view"><a href="assessments.html" title="Assessments">Assessments</a></p>
+        <!-- Right between here. -->
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
